# RoboticUserInterface

./: .gitignore  LICENSE  README.md  RoboticUserInterface.sln
RoboticUserInterface/: CMakeLists.txt  RoboticUserInterface.vcxproj  RoboticUserInterface.vcxproj.filters  resources.qrc
RoboticUserInterface/android/: AndroidManifest.xml
RoboticUserInterface/include/form/: ActionCommand.ui  Actuator.ui  ActuatorDisplay.ui  BMS.ui  CommSelector.ui  Curve.ui  DataItemDisplay.ui  Host.ui  IMU.ui  ItemButton.ui  ItemValue.ui  Odom.ui  RemoteSession.ui  RemoteSessionDialog.ui  RemoteSessionHostEdit.ui  RemoteSessionLog.ui  RobotUserInterface.ui  Settings.ui  SevnceRobot.ui  TopStatus.ui  UserInterface.ui
RoboticUserInterface/include/robotic_user_interface/: ConfigManager.h  RobotUserInterface.h
RoboticUserInterface/include/robotic_user_interface/core/: AsyncDataRecorder.h  Communicator.h  ConfigManager.h  DataPacketSolver.h  DataSource.h  EllipsoidFitter.h  RingBuffer.h  Ssh.h_bck  Types.h
RoboticUserInterface/include/robotic_user_interface/custom/: CustomRobot.h  RobotBase.h  SevnceRobot.h  SevnceTypes.h
RoboticUserInterface/include/robotic_user_interface/dashboard/: dashboard.h
RoboticUserInterface/include/robotic_user_interface/form/: ActuatorDisplay.h  CommSelector.h  FocusStatus.h  FunctionCard.h  NavigationView.h  RemoteSession.h.bck  RobotViewer.h.bck  ToolsBox.h
RoboticUserInterface/include/robotic_user_interface/plot/: CurveDisplay.h  CustomPlotMap.h  DataSourceViewer.h
RoboticUserInterface/libraries/: CMakeLists.txt
RoboticUserInterface/libraries/FluControls/: CMakeLists.txt  FluWindowKitTitleBar.h
RoboticUserInterface/libraries/FluUtils/: CMakeLists.txt
RoboticUserInterface/libraries/FluUtils/lib/: FluUtils.lib  FluUtilsd.lib
RoboticUserInterface/libraries/qcustomplot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h
RoboticUserInterface/libraries/qt_gcw/: CMakeLists.txt  QFlowLayout.cpp  QFlowLayout.h  QSnackbarManager.h
RoboticUserInterface/libraries/qt_material_widgets/: CMakeLists.txt  qtmaterialcombobox.cpp  qtmaterialcombobox.h  qtmaterialcombobox_internal.cpp  qtmaterialcombobox_internal.h  qtmaterialcombobox_p.h  qtmaterialdialog.cpp
RoboticUserInterface/libraries/qwool/: CMakeLists.txt  qwbutton.cpp  qwbutton.h  qwcharts.cpp  qwcharts.h  qwcompasspan.cpp  qwcompasspan.h  qwoolwidget.cpp  qwoolwidget.h  qwprogressarc.cpp  qwprogressarc.h  qwprogressball.cpp  qwprogressball.h  qwprogressvalue.cpp  qwprogressvalue.h  qwprogresswait.cpp  qwprogresswait.h  qwrocker.cpp  qwrocker.h  qwswitcher.cpp  qwswitcher.h  qwswitcherbutton.cpp  qwswitcherbutton.h  qwwidget.cpp  qwwidget.h  qwwindowbutton.cpp  qwwindowbutton.h  qwwindowwidget.cpp  qwwindowwidget.h
RoboticUserInterface/src/: RobotUserInterface.cpp  mainApp.cpp
RoboticUserInterface/src/core/: AsyncDataRecorder.cpp  DataSource.cpp  Ssh.cpp_bck
RoboticUserInterface/src/custom/: CustomRobot.cpp  RobotBase.cpp  SevnceRobot.cpp
RoboticUserInterface/src/dashboard/: dashboard.cpp
RoboticUserInterface/src/form/: ActuatorDisplay.cpp  CommSelector.cpp  FocusStatus.cpp  FunctionCard.cpp  NavigationView.cpp  RemoteSession.cpp.bck  SettingsDisplay.cpp  ToolsBox.cpp
RoboticUserInterface/src/plot/: CurveDisplay.cpp  CustomPlotMap.cpp  DataSourceViewer.cpp
RoboticUserInterface/test/: QWidgetPrototypeTester.cpp  QWidgetPrototypeTester.h
RoboticUserInterfaceTest/: DataPacketSolver.h  RoboticUserInterfaceTest.vcxproj  RoboticUserInterfaceTest.vcxproj.filters  SevnceTest.h  SevnceTypes.h  main.cpp
StyleSheet/light/: FluWindowKitTitleBar.qss  FluWindowkitButton.qss
